--- a/Code/footer/footer.html
+++ b/Code/footer/footer.html
@@ -7,6 +7,7 @@
     <title>Footer</title>
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="../header/header.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
     <!-- header -->
