--- a/Code/home/home.html
+++ b/Code/home/home.html
@@ -765,7 +765,7 @@
                     <div class="gambarLengkapi" style="background-image:url(../image/rekomendasi1.png) ;"></div>
                     <div class="deskripsiLengkapi">
                         <div class="kiri2">
-                            <p>Kusuka (10pcs)</p>
+                            <p>MamyPoko (10pcs)</p>
                             <p class="harga">Rp150.000</p>
                         </div>
                         <div class="kanan2">
