bikin kategori produk

--- a/Code/home/home.html
+++ b/Code/home/home.html
@@ -151,7 +151,7 @@
                     <div class="gambarRekomendasi" style="background-image:url(../image/rekomendasi1.png) ;"></div>
                     <div class="deskripsiRekomendasi">
                         <div class="kiri">
-                            <p>Kusuka (10pcs)</p>
+                            <p>Minyak Angin (20pcs)</p>
                             <p class="harga">Rp150.000</p>
                         </div>
                         <div class="kanan">
@@ -793,7 +793,7 @@
                     <div class="gambarLengkapi" style="background-image:url(../image/rekomendasi1.png) ;"></div>
                     <div class="deskripsiLengkapi">
                         <div class="kiri2">
-                            <p>Kusuka (10pcs)</p>
+                            <p>Minyak Angin (20pcs)</p>
                             <p class="harga">Rp150.000</p>
                         </div>
                         <div class="kanan2">
