--- a/Code/editStok/editStok.html
+++ b/Code/editStok/editStok.html
@@ -71,7 +71,7 @@
                     <div class="gambarLengkapi" style="background-image:url(../image/rekomendasi1.png) ;"></div>
                     <div class="deskripsiLengkapi">
                         <div class="kiri2">
-                            <p>Kusuka (10pcs)</p>
+                            <p>Minyak Angin (20pcs)</p>
                             <p class="harga">Rp150.000</p>
                         </div>
                         <div class="kanan2">
