bikin form di editProduk

--- a/Code/editProduk/editProduk.html
+++ b/Code/editProduk/editProduk.html
@@ -66,36 +66,44 @@
                         <div class="edit">
                             <div class="nama">
                                 <p class="judulEdit">Nama Produk:</p>
-                                <p class="isiEdit">Barbel Besi 20 Kg</p>
+                                <form action="">
+                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit" value="Barbel Besi 20 Kg">
+                                </form>
                             </div>
                             <div class="harga">
                                 <p class="judulEdit">Harga:</p>
-                                <p class="isiEdit">Rp180.000</p>
+                                <form action="">
+                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit" value="Rp180.000">
+                                </form>
                             </div>
                             <div class="stok">
                                 <p class="judulEdit">Stok:</p>
-                                <p class="isiEdit">1000</p>
+                                <form action="">
+                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit" value="1000">
+                                </form>
                             </div>
                         </div>
                         <div class="tulisanDeskripsi">Deskripsi:</div>
                         <div class="isiDeskripsi">
-                            <p>
-                                Warna: Black <br>
-                                Berat: 5 KG <br>
-                                Material: rubber coating | chrome finishing handle <br>
-                                Dimensi: 28x11x9,5 cm <br>
-                                <br>
-                                Barang akan di kirim sesuai varian yang dipilih, dan pastikan memilih varian yang benar.
-                                Prosedur barang retur, mohon customer menyertakan video unboxing, jika tidak di sertakan video tersebut, mohon maaf kami tidak bisa memprosesnya. Terima kasih.
-                                <br><br>
-                                Hexa rubber dumbbell dibuat untuk latihan yang lebih efisien. Pegangan yang di desain berkerut mempermudah pegangan yang andal dan nyaman. Rubber coat pada dumbbell tidak berbau. 
-                                <br><br>
-                                Rancangan desain hexagonal membuat peletakkan lebih aman dan tidak berguling.Berat dumbbell individu seberat 5 KG dengan inti besi cor padat untuk latihan kekuatan.Ideal untuk digunakan di kelas kebugaran, gym di rumah, atau workout area.
-                                <br><br>
-                                - Ujung terbungkus rubber coating heksagonal membantu mencegah berbell bergulung dan meningkatkan penyimpanan yang kokoh di tempat.
-                                <br><br>
-                                Pegangan tekstur non-slip chrome finishing untuk penggunaan yang andal dan nyaman.
-                                </p>
+                            <form action="">
+                                <textarea name="isiEdit" id="isiEdit2" class="isiEdit2" cols="100" rows="200">
+Warna: Black
+Berat: 5 KG
+Material: rubber coating | chrome finishing handle
+Dimensi: 28x11x9,5cm
+
+Barang akan di kirim sesuai varian yang dipilih, dan pastikan memilih varian yang benar.
+Prosedur barang retur, mohon customer menyertakan video unboxing, jika tidak di sertakan video tersebut, mohon maaf kami tidak bisa memprosesnya. Terima kasih.
+
+Hexa rubber dumbbell dibuat untuk latihan yang lebih efisien. Pegangan yang di desain berkerut mempermudah pegangan yang andal dan nyaman. Rubber coat pada dumbbell tidak berbau. 
+
+Rancangan desain hexagonal membuat peletakkan lebih aman dan tidak berguling.Berat dumbbell individu seberat 5 KG dengan inti besi cor padat untuk latihan kekuatan.Ideal untuk digunakan di kelas kebugaran, gym di rumah, atau workout area.
+                                    
+- Ujung terbungkus rubber coating heksagonal membantu mencegah berbell bergulung dan meningkatkan penyimpanan yang kokoh di tempat.
+                                    
+Pegangan tekstur non-slip chrome finishing untuk penggunaan yang andal dan nyaman.
+                                </textarea>
+                            </form>
                         </div>
                     </div>
                 </div>
