--- a/Code/addStok/addStok.html
+++ b/Code/addStok/addStok.html
@@ -57,16 +57,11 @@
 
     <!-- body -->
     <div class="main">
-        <div class="gambarProduk">
+        <div class="gambarProduk" style="background-image:url(../image/plus.png) ;">
             <form action="">
+                <!-- <label id="fileLabel" class="fileLabel">+</label> -->
                 <input type="file" name="addPhoto" id="addPhoto" class="addPhoto">
-                <label id="fileLabel">+</label>
             </form>
-
-            <!-- <div>
-                <input type='file' title="Choose a video please" id="aa" onchange="pressed()">
-                <label id="fileLabel">Choose file</label>
-            </div> -->
         </div>
             <div class="bawahProduk">
                 <div class="deskripsiKiri">
