Lengkapan dropdown dan tombol delete

--- a/Code/addStok/addStok.html
+++ b/Code/addStok/addStok.html
@@ -69,27 +69,34 @@
                         <p>TAMBAH PRODUK</p>
                     </div>
                     <div class="deskripsiProduk">
-                        <div class="edit">
-                            <div class="nama">
-                                <p class="judulEdit">Nama Produk:</p>
-                                <form action="">
-                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit">
-                                </form>
+                        <form action="">
+                            <div class="edit">
+                                <div class="nama">
+                                    <p class="judulEdit">Nama Produk:</p>
+                                    <input type="text" name="nama" class="isiEdit">
+                                </div>
+                                <div class="qtyPerPcs">
+                                    <p class="judulEdit">Qty (Pcs):</p>
+                                    <input type="text" name="qtyPerPcs" class="isiEdit">
+                                </div>
+                                <div class="harga">
+                                    <p class="judulEdit">Harga:</p>
+                                    <input type="text" name="harga" class="isiEdit">
+                                </div>
+                                <div class="stok">
+                                    <p class="judulEdit">Stok:</p>
+                                    <input type="text" name="stok" class="isiEdit">
+                                </div>
+                                <div class="kategoriProduk">
+                                    <p class="judulEdit">Kategori:</p>
+                                        <select name="kategori" class="optionKategori">
+                                            <option value="">Pilih Kategori</option>
+                                            <option value="">he</option>
+                                        </select>
+                                </div>
                             </div>
-                            <div class="harga">
-                                <p class="judulEdit">Harga:</p>
-                                <form action="">
-                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit">
-                                </form>
-                            </div>
-                            <div class="stok">
-                                <p class="judulEdit">Stok:</p>
-                                <form action="">
-                                    <input type="text" name="isiEdit" id="isiEdit" class="isiEdit">
-                                </form>
-                            </div>
-                        </div>
-                        <div class="tulisanDeskripsi">Deskripsi:</div>
+                        </form>
+                        <div class="tulisanDeskripsi">Deskripsi Barang:</div>
                         <div class="isiDeskripsi">
                             <form action="">
                                 <textarea name="isiEdit" id="isiEdit2" class="isiEdit2" cols="100" rows="200">
