--- a/Code/keranjang/keranjang.html
+++ b/Code/keranjang/keranjang.html
@@ -64,11 +64,10 @@
             <div class="garis"></div>
         </div>
         <div class="kotakBawah">
-            <div class="pilihSemua">
-                <label class="container">One
-                    <input type="checkbox" checked="checked">
-                    <span class="checkmark"></span>
-                </label>
+            <div class="pilihSemua">Pilih Semua
+                <input type="checkbox" name="pilih" id="pilih" class="pilih">
+                <!-- <label for="pilih">Pilih Semua</label> -->
+                <span class="check"></span>
             </div>
         </div>
     </div>
