checkout selesai, benerin keranjang dikit

--- a/Code/keranjang/keranjang.html
+++ b/Code/keranjang/keranjang.html
@@ -316,8 +316,10 @@
                     <p class="harga">Rp1.080.000</p>
                 </div>
             </div>
-            <div class="tombolCekot">
-                <p class="tulisanCekot">CHECKOUT</p>
+            <div class="tombol">
+                <div class="tombolCekot">
+                    <p class="tulisanCekot">CHECKOUT</p>
+                </div>
             </div>
         </div>
     </div>
