--- a/Code/checkout/checkout.html
+++ b/Code/checkout/checkout.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="checkout.css">
 </head>
 <body>
+    <div class="bg" id="bg"></div>
+
     <!-- header -->
     <div class="container">
         <!-- logo -->
@@ -146,10 +148,28 @@
                     </div>
                 </div>
                 <div class="tombol">
-                    <div class="tombolCekot">
+                    <button type="submit" class="tombolCekot" onclick="openPopUp()">
                         <p class="tulisanCekot">CHECKOUT</p>
-                    </div>
+                    </button>
                 </div>
+            </div>
+        </div>
+        <div class="popUp" id="popUp">
+            <div class="isiDalam">
+                <p class="berhasil">CHECKOUT BERHASIL</p>
+                <div class="svgBerhasil">
+                    <svg width="114" height="114" viewBox="0 0 154 154" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_210_1671)">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M100.751 34.43C100.751 28.0921 98.2332 22.0137 93.7516 17.5321C89.27 13.0505 83.1917 10.5328 76.8537 10.5328C70.5158 10.5328 64.4374 13.0505 59.9558 17.5321C55.4742 22.0137 52.9565 28.0921 52.9565 34.43V39.2095H100.751V34.43ZM110.31 34.43V39.2095H143.766V134.798C143.766 139.869 141.752 144.732 138.167 148.317C134.581 151.902 129.719 153.916 124.648 153.916H29.0592C23.9889 153.916 19.1262 151.902 15.5409 148.317C11.9556 144.732 9.94141 139.869 9.94141 134.798V39.2095H43.3976V34.43C43.3976 25.5569 46.9224 17.0472 53.1966 10.773C59.4709 4.49871 67.9806 0.973877 76.8537 0.973877C85.7268 0.973877 94.2365 4.49871 100.511 10.773C106.785 17.0472 110.31 25.5569 110.31 34.43ZM104.135 85.6084C105.032 84.7109 105.536 83.4937 105.536 82.2245C105.536 80.9553 105.032 79.7381 104.135 78.8407C103.237 77.9432 102.02 77.439 100.751 77.439C99.4818 77.439 98.2646 77.9432 97.3671 78.8407L72.0743 104.143L61.1198 93.179C60.6754 92.7347 60.1478 92.3822 59.5672 92.1417C58.9866 91.9012 58.3643 91.7774 57.7359 91.7774C57.1075 91.7774 56.4852 91.9012 55.9046 92.1417C55.324 92.3822 54.7964 92.7347 54.3521 93.179C53.9077 93.6234 53.5552 94.151 53.3147 94.7316C53.0742 95.3122 52.9504 95.9344 52.9504 96.5629C52.9504 97.1913 53.0742 97.8136 53.3147 98.3942C53.5552 98.9748 53.9077 99.5024 54.3521 99.9467L68.6904 114.285C69.1344 114.73 69.6618 115.083 70.2425 115.324C70.8231 115.565 71.4456 115.689 72.0743 115.689C72.7029 115.689 73.3254 115.565 73.9061 115.324C74.4867 115.083 75.0141 114.73 75.4581 114.285L104.135 85.6084Z" fill="#604E49"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_210_1671">
+                        <rect width="152.942" height="152.942" fill="white" transform="translate(0.382324 0.973877)"/>
+                        </clipPath>
+                        </defs>
+                    </svg>                        
+                </div>
+                <button type="button" class="kembali" onclick="closePopUp()">KEMBALI KE BERANDA</button>
             </div>
         </div>
     </div>
@@ -221,5 +241,7 @@
             <p>Hak Cipta @ JualanYuk! 2022</p>
         </div>
     </div>
+
+    <script src="checkout.js"></script>
 </body>
 </html>
