--- a/Code/bljr/bljr2.html
+++ b/Code/bljr/bljr2.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="bljr.css">
 </head>
 <body>
-    
+    <div class="bg" id="bg"></div>
+    <button type="submit" class="btn" onclick="openPopUp()">Submit</button>
+    <div class="popUp" id="popUp">
+        <p>checkout berhasil</p>
+        <button type="button" onclick="closePopUp()">OK</button>
+    </div>
+
+    <script src="bljr.js"></script>
 </body>
 </html>
