laporan keuangan selesai

--- a/Code/laporanKeuangan/laporanKeuangan.html
+++ b/Code/laporanKeuangan/laporanKeuangan.html
@@ -84,10 +84,20 @@
                     <!-- <input type="text" name="session-date" id="session-date" placeholder="Select Date" onfocus="(this.type='date')"> -->
                     
                     <!-- untuk bulanan -->
-                    <input type="text" name="session-month" id="session-month" placeholder="Select Month" onfocus="(this.type='month')">
+                    <!-- <input type="text" name="session-month" id="session-month" placeholder="Select Month" onfocus="(this.type='month')"> -->
 
                     <!-- untuk tahunan -->
-
+                    <div class="tahunan">
+                        <select name="session-year" id="session-year" class="session-year">
+                            <option value="">Select Year</option>
+                            <option value="">2018</option>
+                            <option value="">2019</option>
+                            <option value="">2020</option>
+                            <option value="">2021</option>
+                            <option value="">2022</option>
+                            <option value="">2023</option>
+                        </select>
+                    </div>
 
                     <div class="svgPilih">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
