--- a/Code/bljr/bljr3.html
+++ b/Code/bljr/bljr3.html
@@ -14,6 +14,11 @@
             <rect x="0.5" y="0.5" width="21" height="21" stroke="#BDC0AC"/>
         </svg>            
     </button>
+    <button type="button" class="centangKosong displayNone" id="centangKosong">
+        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.5" y="0.5" width="21" height="21" stroke="#BDC0AC"/>
+        </svg>            
+    </button>
     <button type="button" class="edit" id="edit">
         <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11.1987 13.8853H0.933226V3.69137H7.10185L8.03508 2.76465H0.933226C0.685719 2.76465 0.44835 2.86228 0.273336 3.03608C0.0983218 3.20987 0 3.44559 0 3.69137V13.8853C0 14.1311 0.0983218 14.3668 0.273336 14.5406C0.44835 14.7144 0.685719 14.812 0.933226 14.812H11.1987C11.4462 14.812 11.6836 14.7144 11.8586 14.5406C12.0336 14.3668 12.1319 14.1311 12.1319 13.8853V6.93488L11.1987 7.8616V13.8853Z" fill="white"/>
