--- a/Code/bljr/bljr3.html
+++ b/Code/bljr/bljr3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bljr3.css">
 </head>
 <body>
-    <button type="button" class="centang displayNone" id="centang">
+    <!-- <button type="button" class="centang displayNone" id="centang">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M9.6 15.2L16.65 8.15L15.25 6.75L9.6 12.4L6.75 9.55L5.35 10.95L9.6 15.2ZM2 20V2H20V20H2Z" fill="#BDC0AC"/>
             <rect x="0.5" y="0.5" width="21" height="21" stroke="#BDC0AC"/>
@@ -33,7 +33,11 @@
             <path d="M6.13867 6.13892H7.08312V13.2222H6.13867V6.13892Z" fill="white"/>
             <path d="M10.8609 2.76711H9.96367V1.88878H7.03589V2.76711H6.13867V1.88878C6.13837 1.64627 6.23136 1.41293 6.39839 1.23711C6.56542 1.06129 6.79369 0.956461 7.03589 0.944336H9.96367C10.2059 0.956461 10.4341 1.06129 10.6012 1.23711C10.7682 1.41293 10.8612 1.64627 10.8609 1.88878V2.76711Z" fill="white"/>
         </svg>            
-    </button>
+    </button> -->
+
+
+    <button id="theButton" onclick="clickMe()">Click me!</button>
+    <input type="text" name="popup" id="popup" class="hide">
 
     <script src="bljr3.js"></script>
 </body>
